--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           </ul>
 
           <div class="arrows">
-            <p class="arrow-prev" @click=" contatore --" >
+            <p class="arrow-prev" @click=" prev()">
               <i class="fa-solid fa-chevron-left"></i>
             </p>
-            <p class="arrow-next" @click="contatore ++">
+            <p class="arrow-next" @click="next()">
               <i class="fa-solid fa-chevron-right"></i>
             </p>
           </div>
